--- a/themes/inhabitent-theme/sass/_header.scss
+++ b/themes/inhabitent-theme/sass/_header.scss
@@ -1,5 +1,5 @@
 
-.site-header  {
+.site-header{
   background-color: rgba(255, 255, 255, 0.8);
   border-bottom: 1px solid #e1e1e1;
   padding: .5rem 0;
@@ -8,13 +8,13 @@
   z-index: 10;
 }
 
-.site-header .container  {
+.site-header .container{
   display: flex;
   align-items: center;
   justify-content: space-between;
   text-transform: uppercase;
 }
- .change-header  {
+ .site-header .change-background {
     background-color: transparent;
     border-bottom: 0;
     position: absolute;
